--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <tbody >
           <tr >
             <td>
-              <img src="/images/3 copy (1).jpg" width="70">
+              <img src="./images/3 copy (1).jpg" width="70">
             </td>
             <td align="right">
               <h3>ANTO JESSI A</h3>
