--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
           <tr>
             <td>
               <p>
-                   <img src="/images/Smart India Hackathon Ideathon - G-Code.png" width="300">
+                   <img src="./images/Smart India Hackathon Ideathon - G-Code.png" width="300">
               <h3 align="center"><a href="certifications.html">Hackathon</a></h3>
               Participated in Hackathons,Ideathons,events</p>
             </td>
             <td align="center">
               <p>
-              <img src="/images/Smart India Hackathon Ideathon - G-Code (1).png" width="300" >
+              <img src="./images/Smart India Hackathon Ideathon - G-Code (1).png" width="300" >
               <h3 align="center" > Machine Learning</h3>
               Learnt Basics in Machine Learning
             </p>
             </td>
             <td align="right">
               <p>
-              <img src="/images/Smart India Hackathon Ideathon - G-Code (2).png" width="300">
+              <img src="./images/Smart India Hackathon Ideathon - G-Code (2).png" width="300">
                 <h3 align="center"><a href="photo.html">Photography</a></h3>
                 Capturing the Details (NaturePhotography)
               </p>
@@ -78,20 +78,20 @@
 
           <tr>
             <td>
-                   <img src="/images/certificates/Screenshot 2024-08-11 171733.png" width="300">
+                   <img src="./images/certificates/Screenshot 2024-08-11 171733.png" width="300">
               <h3 align="center">Social Emotional Learning</h3>
               <p align="center">IUCEE NEP Course </p>
             </td>
             <td align="center">
               <p>
-              <img src="/images/certificates/Screenshot 2024-08-11 171321.png" width="300" >
+              <img src="./images/certificates/Screenshot 2024-08-11 171321.png" width="300" >
               <h3 align="center" > Google Skill Boost</h3>
               Google Cloud Career Launchpad 
             </p>
             </td>
             <td align="right">
               <p>
-              <img src="/images/certificates/Screenshot 2024-08-11 173707.png" width="300">
+              <img src="./images/certificates/Screenshot 2024-08-11 173707.png" width="300">
                 <h3 align="center">AI & ML</h3>
                 Completed One Month Internship
               </p>
