--- a/certifications.html
+++ b/certifications.html
@@ -14,50 +14,50 @@
         <tbody align="center">
             <tr>
                 <td >
-                <img src="/images/certificates/Screenshot 2024-08-11 171539.png" width="500">
+                <img src="./images/certificates/Screenshot 2024-08-11 171539.png" width="500">
             </td>
             <td>
-                <img src="/images/certificates/Screenshot 2024-08-11 171643.png" width="500">
+                <img src="./images/certificates/Screenshot 2024-08-11 171643.png" width="500">
             </td>
         </tr>
         <tr>
             <td >
-            <img src="/images/certificates/Screenshot 2024-08-11 171849.png" width="500">
+            <img src="./images/certificates/Screenshot 2024-08-11 171849.png" width="500">
         </td>
         <td>
-            <img src="/images/certificates/Screenshot 2024-08-11 171912.png" width="500">
+            <img src="./images/certificates/Screenshot 2024-08-11 171912.png" width="500">
         </td>
     </tr>
     <tr>
         <td >
-        <img src="/images/certificates/Screenshot 2024-08-11 171410.png" width="500">
+        <img src="./images/certificates/Screenshot 2024-08-11 171410.png" width="500">
     </td>
     <td>
-        <img src="/images/certificates/Screenshot 2024-08-11 171733.png" width="500">
+        <img src="./images/certificates/Screenshot 2024-08-11 171733.png" width="500">
     </td>
 </tr>
 <tr>
     <td >
-    <img src="/images/certificates/Screenshot 2024-08-11 171321.png" width="500">
+    <img src="./images/certificates/Screenshot 2024-08-11 171321.png" width="500">
 </td>
 <td>
-    <img src="/images/certificates/Screenshot 2024-08-11 171810.png" width="500">
+    <img src="./images/certificates/Screenshot 2024-08-11 171810.png" width="500">
 </td>
 </tr>
 <tr>
     <td >
-    <img src="/images/certificates/Screenshot 2024-08-11 174308.png" width="500">
+    <img src="./images/certificates/Screenshot 2024-08-11 174308.png" width="500">
 </td>
 <td>
-    <img src="/images/certificates/Screenshot 2024-08-11 174322.png" width="500">
+    <img src="./images/certificates/Screenshot 2024-08-11 174322.png" width="500">
 </td>
 </tr>
 <tr>
     <td>
-        <img src="/images/certificates/Screenshot 2024-08-11 174405.png" width="500">
+        <img src="./images/certificates/Screenshot 2024-08-11 174405.png" width="500">
     </td>
     <td>
-        <img src="/images/certificates/iete.jpg" width="500">
+        <img src="./images/certificates/iete.jpg" width="500">
     </td>
 </tr>
 </tbody>
