--- a/photo.html
+++ b/photo.html
@@ -15,27 +15,27 @@
         <tbody align="center">
         <tr>
             <td >
-                <img src="/photos/bitterguardflower.jpg" width="400">
+                <img src="./photos/bitterguardflower.jpg" width="400">
             </td>
             <td>
-                <img src="/photos/rain1.jpg" width="400">
+                <img src="./photos/rain1.jpg" width="400">
             </td>
             
         </tr>
         <tr>
             <td >
-                <img src="/photos/crow-lake-1.jpg" width="400">
+                <img src="./photos/crow-lake-1.jpg" width="400">
             </td>
             <td >
-                <img src="/photos/beachsunset.jpg" width="400">
+                <img src="./photos/beachsunset.jpg" width="400">
             </td>
         </tr>
         <tr>
             <td >
-                <img src="/photos/IMG20240502171553.jpg" width="400">
+                <img src="./photos/IMG20240502171553.jpg" width="400">
             </td>
             <td  >
-                <img src="/photos/IMG_20240422_135253.jpg" width="400">
+                <img src="./photos/IMG_20240422_135253.jpg" width="400">
             </td>
         </tr>
         <tr>
@@ -43,31 +43,31 @@
                 <img src="/photos/kitty1-11.jpg" width="400">
             </td>
             <td  >
-                <img src="/photos/pathway-1.jpg" width="400">
+                <img src="./photos/pathway-1.jpg" width="400">
             </td>
         </tr>
         <tr>
             <td >
-                <img src="/photos/planeLIGHTS-1.jpg" width="400">
+                <img src="./photos/planeLIGHTS-1.jpg" width="400">
             </td>
             <td>
-                <img src="/photos/bevel white.jpg" width="400">
+                <img src="./photos/bevel white.jpg" width="400">
             </td>
         </tr>
         <tr>
             <td>
-                <img src="/photos/skyMOONlight-1.jpg" width="400">
+                <img src="./photos/skyMOONlight-1.jpg" width="400">
             </td>
             <td>
-                <img src="/photos/IMG20240328175102.jpg"width="400" >
+                <img src="./photos/IMG20240328175102.jpg"width="400" >
             </td>
         </tr>
         <tr>
             <td  >
-                <img src="/photos/IMG20240501184654.jpg" width="400">
+                <img src="./photos/IMG20240501184654.jpg" width="400">
             </td>
             <td  >
-                <img src="/photos/track-1.jpg" width="400">
+                <img src="./photos/track-1.jpg" width="400">
             </td>
         </tr>
         <tr>
