--- a/photo.html
+++ b/photo.html
@@ -40,7 +40,7 @@
         </tr>
         <tr>
             <td align="center" >
-                <img src="/photos/kitty1-11.jpg" width="400">
+                <img src="./photos/kitty1-11.jpg" width="400">
             </td>
             <td  >
                 <img src="./photos/pathway-1.jpg" width="400">
